http module: datatables: put responsive hide/show child into separate first column to avoid conflicts with truncate functionality in first column. Be aware: a new th/td html element needs to be put into all datatables!

--- a/modules/http/webif/gstatic/css/smarthomeng.css
+++ b/modules/http/webif/gstatic/css/smarthomeng.css
@@ -47,6 +47,9 @@ table td.truncate:active {
   overflow: visible;
 }
 
+table th.datatable-responsive {
+  width: 10px;
+}
 table.dataTableAdditional {
   display: none;
   table-layout: fixed;
